feat: Credit 특정 거래내역 조회 기능 구현